test_regress/t/t_interface_generic_bad3.out
%Error: t/t_interface_generic_bad3.v:19:3: Cannot find file containing interface: 'inf'
   19 |   inf inf_inst();
      |   ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_interface_generic_bad3.v:20:32: Found definition of 'inf_inst' as a CELL but expected a variable
   20 |   GenericModule genericModule (inf_inst);
      |                                ^~~~~~~~
%Error: t/t_interface_generic_bad3.v:11:33: Interface port 'a' is not connected to interface/modport pin expression
   11 | module GenericModule (interface a);
      |                                 ^
%Error: t/t_interface_generic_bad3.v:22:5: Dotted reference to instance that refers to missing module/interface: 'inf'
   22 |     inf_inst.v = 7;
      |     ^~~~~~~~
%Error: t/t_interface_generic_bad3.v:22:14: Can't find definition of 'v' in dotted variable/method: 'inf_inst.v'
   22 |     inf_inst.v = 7;
      |              ^
%Error: t/t_interface_generic_bad3.v:23:5: Can't find definition of scope/variable: 'inf_inst2'
                                         : ... Suggested alternative: 'inf_inst'
   23 |     inf_inst2.k = 9;
      |     ^~~~~~~~~
%Error: Exiting due to
